; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/sound/pci/extr_cmi.c_cmi_suspend.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/sound/pci/extr_cmi.c_cmi_suspend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sc_info = type { i32, %struct.TYPE_3__, %struct.TYPE_4__ }
%struct.TYPE_3__ = type { i32 }
%struct.TYPE_4__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @cmi_suspend to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cmi_suspend(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.sc_info*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call %struct.sc_info* @pcm_getdevinfo(i32 %4)
  store %struct.sc_info* %5, %struct.sc_info** %3, align 8
  %6 = load %struct.sc_info*, %struct.sc_info** %3, align 8
  %7 = getelementptr inbounds %struct.sc_info, %struct.sc_info* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @snd_mtxlock(i32 %8)
  %10 = load %struct.sc_info*, %struct.sc_info** %3, align 8
  %11 = load %struct.sc_info*, %struct.sc_info** %3, align 8
  %12 = getelementptr inbounds %struct.sc_info, %struct.sc_info* %11, i32 0, i32 2
  %13 = call i32 @cmi_ch0_stop(%struct.sc_info* %10, %struct.TYPE_4__* %12)
  %14 = load %struct.sc_info*, %struct.sc_info** %3, align 8
  %15 = getelementptr inbounds %struct.sc_info, %struct.sc_info* %14, i32 0, i32 2
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  store i32 %13, i32* %16, align 4
  %17 = load %struct.sc_info*, %struct.sc_info** %3, align 8
  %18 = load %struct.sc_info*, %struct.sc_info** %3, align 8
  %19 = getelementptr inbounds %struct.sc_info, %struct.sc_info* %18, i32 0, i32 1
  %20 = call i32 @cmi_ch1_stop(%struct.sc_info* %17, %struct.TYPE_3__* %19)
  %21 = load %struct.sc_info*, %struct.sc_info** %3, align 8
  %22 = getelementptr inbounds %struct.sc_info, %struct.sc_info* %21, i32 0, i32 1
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 0
  store i32 %20, i32* %23, align 4
  %24 = load %struct.sc_info*, %struct.sc_info** %3, align 8
  %25 = call i32 @cmi_power(%struct.sc_info* %24, i32 3)
  %26 = load %struct.sc_info*, %struct.sc_info** %3, align 8
  %27 = getelementptr inbounds %struct.sc_info, %struct.sc_info* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = call i32 @snd_mtxunlock(i32 %28)
  ret i32 0
}

declare dso_local %struct.sc_info* @pcm_getdevinfo(i32) #1

declare dso_local i32 @snd_mtxlock(i32) #1

declare dso_local i32 @cmi_ch0_stop(%struct.sc_info*, %struct.TYPE_4__*) #1

declare dso_local i32 @cmi_ch1_stop(%struct.sc_info*, %struct.TYPE_3__*) #1

declare dso_local i32 @cmi_power(%struct.sc_info*, i32) #1

declare dso_local i32 @snd_mtxunlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
